Overhauled the content again. Added a link to download a pdf resume, removed the academia section in favour of adding a resume excerpt, revised css to tweak the way the quotes look.

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -18,6 +18,12 @@ p.quote {
 	font-style: italic;
 }
 
+p.quoter {
+	font-size: 14px;
+	text-align: right;
+	font-style: italic;
+}
+
 p.small {
 	font-size: 16px;
 }
