--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -142,6 +142,12 @@ header .intro-text .skills {
 	color: #233140;
 }
 
+
+li.pub {
+    padding-top: 8px;
+}
+
+
 @media(min-width:768px) {
 	header .container {
 		padding-top: 200px;
