--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -32,15 +32,14 @@ p.small {
 a,
 a:hover,
 a:focus,
-a:active,
-a.active {
+a:active {
 	outline: 0;
 	color: #F38630;
 }
 
-a.skill {
+a.dark {
 	color: #233140;
-	border-bottom: dotted 1px;
+	text-decoration: underline;
 }
 
 a.about {
@@ -91,11 +90,11 @@ hr.star-dark:after {
 }
 
 hr.star-light {
-	border-color: #fff;
+	border-color: #233140;
 }
 
 hr.star-light:after {
-	color: #fff;
+	color: #233140;
 	background-color: #F38630;
 }
 
@@ -147,11 +146,46 @@ header .intro-text .skills {
 	color: #233140;
 }
 
-
-li.pub {
-    padding-top: 8px;
+table.resume {
+	width: 100%;
+	overflow: hidden;
+	font-size: 18px;
+	line-height: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
+td {
+	padding-bottom: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-bottom: 10px;
+}
+
+td.time {
+	width: 20%;
+	text-align: right;
+	vertical-align: text-top;
+}
+
+td.item {
+	width: 80%;
+	text-align: left;
+	vertical-align: text-top;
+}
+
+ul.item-details {
+	list-style-type: square;
+	font-size: 18px;
+	line-height: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 10px;
+}
+
+li {
+	margin:0 0 20px 0;
+}
 
 @media(min-width:768px) {
 	header .container {
@@ -226,7 +260,7 @@ section h2 {
 }
 
 section.success {
-	color: #fff;
+	color: #233140;
 	background: #F38630;
 }
 
@@ -301,7 +335,7 @@ section.success {
 	margin-top: 15px;
 	border: solid 2px #fff;
 	font-size: 35px;
-	color: #fff;
+	color: #233140;
 	background: 0 0;
 	transition: all .3s ease-in-out;
 }
@@ -397,7 +431,7 @@ footer .footer-below {
 	display: inline-block;
 	width: 50px;
 	height: 50px;
-	border: 2px solid #fff;
+	border: 2px solid #233140;
 	border-radius: 100%;
 	text-align: center;
 	font-size: 20px;
