--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -325,6 +325,57 @@ section.success {
 	z-index: 2;
 }
 
+#research .research-item {
+	right: 0;
+	margin: 0 0 15px;
+}
+
+#research .research-item .research-link {
+	display: block;
+	position: relative;
+	margin: 0 auto;
+	max-width: 400px;
+}
+
+#research .research-item .research-link .caption {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	background: rgba(243, 134, 48,.85);
+	-webkit-transition: all ease .5s;
+	-moz-transition: all ease .5s;
+	transition: all ease .5s;
+}
+
+#research .research-item .research-link .caption:hover {
+	opacity: 1;
+}
+
+#research .research-item .research-link .caption .caption-content {
+	position: absolute;
+	top: 50%;
+	width: 100%;
+	height: 20px;
+	margin-top: -12px;
+	text-align: center;
+	font-size: 20px;
+	color: #fff;
+}
+
+#research .research-item .research-link .caption .caption-content i {
+	margin-top: -12px;
+}
+
+#research .research-item .research-link .caption .caption-content h3,
+#research .research-item .research-link .caption .caption-content h4 {
+	margin: 0;
+}
+
+#research * {
+	z-index: 2;
+}
+
 @media(min-width:767px) {
 	#portfolio .portfolio-item {
 		margin: 0 0 30px;
